--- a/tool.ipynb
+++ b/tool.ipynb
@@ -674,6 +674,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the functions above"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -709,17 +716,137 @@
     "\n",
     "import glob\n",
     "\n",
-    "# root_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\analyze\\ddilog_full\"\n",
-    "# basename = \"Adobe-Ae_FastMask_Query1024.log\"\n",
-    "#create_ddi_json(root_path, basename)\n",
+    "root_path = r\"C:\\Users\\GAME\\Documents\\Project\\helpWindow\\swathi\"\n",
+    "basename = \"1024_generic.log\"\n",
+    "create_ddiConv_json(root_path, basename)\n",
+    "#create_ddiPool_json(root_path, basename)\n",
+    "#create_ddiGEMM_json(root_path, basename)\n",
     "\n",
-    "root_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\analyze\\ddilog_full\"\n",
-    "files = glob.glob(root_path+\"\\\\*.log\")\n",
+    "# root_path = r\"C:\\Intel\\igfx\\d3d12\"\n",
+    "# files = glob.glob(root_path+\"\\\\*.log\")\n",
     "\n",
-    "for file in files:\n",
-    "    basename = os.path.basename(file)\n",
-    "    #print(basename)\n",
-    "    create_ddiPool_json(root_path, basename)"
+    "# for file in files:\n",
+    "#     basename = os.path.basename(file)\n",
+    "#     print(basename)\n",
+    "#     create_ddiConv_json(root_path, basename)\n",
+    "#     create_ddiPool_json(root_path, basename)\n",
+    "#     create_ddiGEMM_json(root_path, basename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import cv2\n",
+    "# img = cv2.imread(r\"C:\\Users\\GAME\\Documents\\Project\\Adobe_Denoise\\denoiser_corruption_23.04.19\\intel_output_CR3_correct.dng\", cv2.IMREAD_GRAYSCALE)\n",
+    "# cv2.imwrite(\"gray.png\", img)\n",
+    "\n",
+    "from PIL import Image\n",
+    "\n",
+    "def rgb_to_yuv(image):\n",
+    "    # Convert the image to YUV mode\n",
+    "    yuv_image = image.convert(\"YCbCr\")\n",
+    "    return yuv_image\n",
+    "\n",
+    "\n",
+    "def print_pixel(image_path):\n",
+    "    image = Image.open(image_path)\n",
+    "    # Convert the image to YUV\n",
+    "    yuv_image = rgb_to_yuv(image)\n",
+    "\n",
+    "    for x in range(10):\n",
+    "        pixel_value = yuv_image.getpixel((x, x))\n",
+    "        print(\"Pixel value:\", pixel_value)\n",
+    "\n",
+    "image_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe_Denoise\\denoiser_corruption_23.04.19\\intel_output_CR3_incorrect.dng\"\n",
+    "image_correct = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe_Denoise\\denoiser_corruption_23.04.19\\intel_output_CR3_correct.dng\"\n",
+    "print_pixel(image_path)\n",
+    "print_pixel(image_correct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddi_file = r'C:\\Users\\GAME\\Documents\\Project\\helpWindow\\swathi\\704_generic_precompile.log'\n",
+    "openf =  open(ddi_file, \"r\")\n",
+    "\n",
+    "lines = openf.readlines()\n",
+    "bad_list = []\n",
+    "\n",
+    "i = -1\n",
+    "while i < len(lines)-1:\n",
+    "    i += 1\n",
+    "    #print(lines[i])\n",
+    "    if \"Precompiled CM Generic Conv Kernel: g_conv_generic_CM is available\" in lines[i]:\n",
+    "        j = 0\n",
+    "        while i+j < len(lines) - 1:\n",
+    "            j += 1\n",
+    "            if \"InitializeMetaCommand : Using Generic Precompiled Kernel\" in lines[i+j]:\n",
+    "                flag = 1\n",
+    "            if \"Precompiled CM Generic Conv Kernel: g_conv_generic_CM is available\" in lines[i+j]:\n",
+    "                if flag != 1:\n",
+    "                    bad_list.append(i)\n",
+    "                    print(i)\n",
+    "                    # parameter\n",
+    "                    param_str =  re.findall(r'0x\\w+', lines[i-3])\n",
+    "                    param_list = []\n",
+    "                    if len(param_str) > 5 \\\n",
+    "                    and \"Filter\" in lines[i-3]:  # for the case of GemmBasedConvolution\n",
+    "                        print(\"strange\")\n",
+    "                    for idx, val in enumerate(param_str):\n",
+    "                         param_list.append(int(val, 16))\n",
+    "                    input_shape = param_list[1:5]\n",
+    "                    filte_shape = param_list[5:9]\n",
+    "                    bias_shape = param_list[9:13]\n",
+    "                    output_shape = param_list[9:13]\n",
+    "                    filter_flag = re.findall(r'0x\\w+', lines[i-2])[0]\n",
+    "                    bias_flag = re.findall(r'0x\\w+', lines[i-2])[1]\n",
+    "                    match = re.findall(r'\\(([^()]+)\\)[^()]*$', lines[i-1])[-1]\n",
+    "                    print(match)\n",
+    "                    \n",
+    "                break\n",
+    "        i = i+j-1\n",
+    "        flag =0\n",
+    "print(\"Total missing cases are {}. They are in line {}\".format(len(bad_list), bad_list))\n",
+    "openf.close()\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# generic kernel related DDI log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddi_file = r'C:\\Users\\GAME\\Documents\\Project\\helpWindow\\swathi\\704_generic_precompile.log'\n",
+    "openf =  open(ddi_file, \"r\")\n",
+    "\n",
+    "lines = openf.readlines()\n",
+    "bad_list = []\n",
+    "\n",
+    "i = -1\n",
+    "count = 0\n",
+    "while i < len(lines)-1:\n",
+    "    i += 1\n",
+    "    if \"Executed Conv MetaCommand for:\" in lines[i]:\n",
+    "        if \"ExecuteMetaCommand : Using Generic Precompiled Kernel\" not in lines[i+1]:\n",
+    "            print(lines[i].rstrip())\n",
+    "            count +=1\n",
+    "        else:\n",
+    "            i= i+2\n",
+    "print(count)\n"
    ]
   },
   {
