Update for the guideline

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "\n",
+    "## [Extract PIX info](#section1)\n",
+    "## [EXtract DDI info](#section2)\n",
+    "## [Extract OV info](#section3)\n",
+    "## [Extract onnxruntime profiling](#section4)\n",
+    "## [DML&OV Layer By Layer profiling](#section5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -270,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract DDI info"
+    "# <a id='section2'>Extract DDI info </a>"
    ]
   },
   {
@@ -944,7 +957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract PIX info\n",
+    "# <a id='section1'>Extract PIX info</a>\n",
     "* Before using the script below, please cget the PIX log first. You can get step-by-step guide from this recording [PIX GPU capture training-20220314_155822-Meeting Recording.mp4](https://intel.sharepoint.com/sites/applied_ai/_layouts/15/stream.aspx?id=%2Fsites%2Fapplied%5Fai%2FShared%20Documents%2FClient%20AI%2FPIX%20GPU%20capture%20training%2D20220314%5F155822%2DMeeting%20Recording%2Emp4&referrer=StreamWebApp%2EWeb&referrerScenario=AddressBarCopied%2Eview)"
    ]
   },
@@ -1057,11 +1070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to do Latency comparison for individual types of operators\n",
-    "## Step 1: collect DML perf(from PIX log), OV perf(From [Extract OV performance data] section)\n",
-    "## Step 2: combine layer name with DML perf and OV perf, may need to manually check\n",
-    "## Step 3: collect input shape, output shape info for each layer \n",
-    "### Option 1: extract onnxruntime profiling with the command line below\n",
+    "## <<a id='section4'>Extract onnxruntime profiling data </a>\n",
     "* take the unet model as an example, `onnxruntime_perf_test.exe -m times -r 1 -f unet_sample_batch:2 -f unet_sample_channels:4 -f unet_sample_width:64 -f unet_sample_height:64 -f unet_hidden_batch:2 -f unet_hidden_sequence:77 -I -u temp.onnx -p ort_profiling.json -e dml model_path`\n",
     "  - `-u` is used to avoid only one DML fused node is dummped\n",
     "  - `-p` is used to generate information like layer name, input and output shape.\n",
@@ -1132,7 +1141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: combine ORT info with DML and OV performance data"
+    "#  <a id='section5'> DML&OV Layer By Layer profiling </a> \n",
+    "* Step1: collect CSV1:  DML info from [Extract PIX log](#section1) which has <font color='yellow'>the layer name</font> and DML performance data for each layer\n",
+    "* Step2: collect CSV2:  DML DDI info from [Extract DDI log](#section2) which has the <font color='red'>input/output shape/datatype/layout</font> for each layer\n",
+    "* Step3: collect CSV3:  OV info from [Extract OV performance data](#section3) which has <font color='yellow'>the layer name</font>  and OV performance data for each layer\n",
+    "* Step4: collect CSV4:  model info from [onnxruntime profiling data](#section4) which has <font color='yellow'>the layer name</font>  and the <font color='red'>input/output shape/datatype</font> for each layer  \n",
+    "* Step5: Once these four CSVs are collected, we can connect them based on the unique info. For example,  <font color='yellow'>layer name</font>  in yellow;  <font color='red'>input/output shape/datatype</font> in red. Some info may not be exactly same, need to manually check\n",
+    "> Here is a reference for automatically combining ORT info with DML and OV performance data"
    ]
   },
   {
@@ -1432,7 +1447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract OpenVINO performance data\n",
+    "# <a id='section3'> Extract OpenVINO performance data</a>\n",
     "## Option 1 if you have ort_perf_test.exe debug version:\n",
     "1. set `ORT_OPENVINO_ENABLE_DEBUG=1`, and run `ort_perf_test.exe  -m times -r 1 -I -e openvino -i \"device_type|GPU_FP32 cache_dir|ov_cache\" onnx_model_path`\n",
     "2. some performance logs will be appeared in the command window, here is an example below. You need to manually save it and process into csv file [The script below is some reference but it is not very good]\n",
@@ -1449,7 +1464,7 @@
     "```\n",
     "3. The parsed onnx model will also be saved as `OpenVINOExecutionProvider_OpenVINO-EP-subgraph_1_0.onnx`, you can use this model to run `openvino benchmark_app` if the original model cannot be parsed by openvino\n",
     "\n",
-    "## Option 2\n",
+    "## Option 2 (Recommend)\n",
     "1. set python environment: pip install openvino_dev\n",
     "2. this package contains a tool called benchmark_app\n",
     "3. run benchmark_app with the command line\n",
