--- a/tool.ipynb
+++ b/tool.ipynb
@@ -1070,7 +1070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <<a id='section4'>Extract onnxruntime profiling data </a>\n",
+    "## <a id='section4'>Extract onnxruntime profiling data </a>\n",
     "* take the unet model as an example, `onnxruntime_perf_test.exe -m times -r 1 -f unet_sample_batch:2 -f unet_sample_channels:4 -f unet_sample_width:64 -f unet_sample_height:64 -f unet_hidden_batch:2 -f unet_hidden_sequence:77 -I -u temp.onnx -p ort_profiling.json -e dml model_path`\n",
     "  - `-u` is used to avoid only one DML fused node is dummped\n",
     "  - `-p` is used to generate information like layer name, input and output shape.\n",
@@ -1142,11 +1142,11 @@
    "metadata": {},
    "source": [
     "#  <a id='section5'> DML&OV Layer By Layer profiling </a> \n",
-    "* Step1: collect CSV1:  DML info from [Extract PIX log](#section1) which has <font color='yellow'>the layer name</font> and DML performance data for each layer\n",
+    "* Step1: collect CSV1:  DML info from [Extract PIX log](#section1) which has <font color='orange'>the layer name</font> and DML performance data for each layer\n",
     "* Step2: collect CSV2:  DML DDI info from [Extract DDI log](#section2) which has the <font color='red'>input/output shape/datatype/layout</font> for each layer\n",
-    "* Step3: collect CSV3:  OV info from [Extract OV performance data](#section3) which has <font color='yellow'>the layer name</font>  and OV performance data for each layer\n",
-    "* Step4: collect CSV4:  model info from [onnxruntime profiling data](#section4) which has <font color='yellow'>the layer name</font>  and the <font color='red'>input/output shape/datatype</font> for each layer  \n",
-    "* Step5: Once these four CSVs are collected, we can connect them based on the unique info. For example,  <font color='yellow'>layer name</font>  in yellow;  <font color='red'>input/output shape/datatype</font> in red. Some info may not be exactly same, need to manually check\n",
+    "* Step3: collect CSV3:  OV info from [Extract OV performance data](#section3) which has <font color='orange'>the layer name</font>  and OV performance data for each layer\n",
+    "* Step4: collect CSV4:  model info from [onnxruntime profiling data](#section4) which has <font color='orange'>the layer name</font>  and the <font color='red'>input/output shape/datatype</font> for each layer  \n",
+    "* Step5: Once these four CSVs are collected, we can connect them based on the unique info. For example,  <font color='orange'>layer name</font>  in yellow;  <font color='red'>input/output shape/datatype</font> in red. Some info may not be exactly same, need to manually check\n",
     "> Here is a reference for automatically combining ORT info with DML and OV performance data"
    ]
   },
