--- a/tool.ipynb
+++ b/tool.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Summary\n",
+    "# Content\n",
+    "* [Extract DML PIX info](#section1)\n",
+    "* [EXtract DML DDI info](#section2)\n",
+    "* [Extract OpenVINO performance data](#section3)\n",
+    "* [Extract onnxruntime profiling data](#section4)\n",
+    "* [DML&OV Layer By Layer profiling](#section5)\n",
+    "> tip1: the links above don't work in browser and only works in locak dev. Please seach the key words in browser to locate the position.\n",
     "\n",
-    "## [Extract PIX info](#section1)\n",
-    "## [EXtract DDI info](#section2)\n",
-    "## [Extract OV info](#section3)\n",
-    "## [Extract onnxruntime profiling](#section4)\n",
-    "## [DML&OV Layer By Layer profiling](#section5)"
+    "> tip2: sometimes the scripts below may need some modifications to perfectly match your own requirement. "
    ]
   },
   {
@@ -283,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a id='section2'>Extract DDI info </a>"
+    "# <a id='section2'>Extract DML DDI info </a>"
    ]
   },
   {
@@ -957,7 +959,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a id='section1'>Extract PIX info</a>\n",
+    "# <a id='section1'>Extract DML PIX info</a>\n",
     "* Before using the script below, please cget the PIX log first. You can get step-by-step guide from this recording [PIX GPU capture training-20220314_155822-Meeting Recording.mp4](https://intel.sharepoint.com/sites/applied_ai/_layouts/15/stream.aspx?id=%2Fsites%2Fapplied%5Fai%2FShared%20Documents%2FClient%20AI%2FPIX%20GPU%20capture%20training%2D20220314%5F155822%2DMeeting%20Recording%2Emp4&referrer=StreamWebApp%2EWeb&referrerScenario=AddressBarCopied%2Eview)"
    ]
   },
