--- a/tool.ipynb
+++ b/tool.ipynb
@@ -1090,51 +1090,73 @@
     "# index value in tensor allocation is different, where is it?\n",
     "import csv\n",
     "import json\n",
-    "time_file = r'C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\\new_issue\\profiling.json_2023-10-12_11-33-55.json'\n",
+    "time_file = r'C:\\Users\\GAME\\Documents\\Project\\INT8\\mobilenetv2-12-int8\\mobilenet_dml.json_2023-12-12_17-04-08.json'\n",
     "csv_file = time_file.replace(\"json\", 'csv')\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer = csv.writer(csvf)\n",
     " # only has three inputs and  one output as defualt, may need to change as needed\n",
-    "line = [\"name\",\"op_type\", \"input1_type\", \"input1_shape\", \"input2_type\", \"input2_shape\",\"input3_type\", \"input3_shape\",\"output_type\",\"output_shape\"]\n",
+    "line = [\"name\",\"op_type\", \"input1_type\", \"input1_shape\", \"input2_type\", \"input2_shape\",\"input3_type\", \"input3_shape\",\"output_type\",\"output_shape\",\"duration\"]\n",
     "writer.writerow(line)\n",
     "count = 0\n",
     "node_count =0\n",
+    "total_duration = 0\n",
+    "count_time={}\n",
+    "count_name = {}\n",
+    "other_info={}\n",
     "with open(time_file, 'r') as f:\n",
     "    # load the contents of the file into a dictionary\n",
     "    data = json.load(f)\n",
     "    for i in range(len(data)):\n",
-    "        if \"/conv_in/Conv_fence_before\" in data[i][\"name\"]:\n",
-    "            count += 1\n",
-    "        if count == 2:\n",
-    "            break\n",
-    "        if \"kernel\" in data[i][\"name\"]:     \n",
-    "            op_type = data[i]['args']['op_name']\n",
+    "        # if \"/conv_in/Conv_fence_before\" in data[i][\"name\"]:\n",
+    "        #     count += 1\n",
+    "        # if count == 2:\n",
+    "        #     break\n",
+    "        if \"kernel\" in data[i][\"name\"]: \n",
     "            output_name = data[i][\"name\"].split(\"_kernel\")[0]\n",
-    "            output_size = data[i]['args']['output_size']\n",
-    "            input_type = [\"none\"]*3\n",
-    "            input_shape = [[]] * 3\n",
-    "            output_type = None\n",
-    "            output_shape = None\n",
-    "            for j, p in enumerate(data[i]['args']['input_type_shape']):\n",
-    "                if j == 3:\n",
-    "                    break\n",
-    "                for key, value in p.items():\n",
-    "                    input_type[j]= key\n",
-    "                    input_shape[j]= value\n",
-    "            for j, p in enumerate(data[i]['args']['output_type_shape']):\n",
-    "                for key, value in p.items():\n",
-    "                    output_type = key\n",
-    "                    output_shape = value\n",
-    "                    break\n",
-    "                break\n",
+    "            if output_name not in count_time:\n",
+    "                count_time[output_name] = int(data[i][\"dur\"])\n",
+    "                count_name[output_name] = 1\n",
     "\n",
-    "            newline = [output_name, op_type, input_type[0],input_shape[0],\\\n",
-    "                       input_type[1],input_shape[1],\n",
-    "                        input_type[2], input_shape[2],\n",
-    "                        output_type,output_shape]\n",
-    "            writer.writerow(newline)\n",
-    "            node_count+=1\n",
+    "                \n",
+    "                op_type = data[i]['args']['op_name']\n",
+    "                \n",
+    "                output_size = data[i]['args']['output_size']\n",
+    "                input_type = [\"none\"]*3\n",
+    "                input_shape = [[]] * 3\n",
+    "                output_type = None\n",
+    "                output_shape = None\n",
+    "                for j, p in enumerate(data[i]['args']['input_type_shape']):\n",
+    "                    if j == 3:\n",
+    "                        break\n",
+    "                    for key, value in p.items():\n",
+    "                        input_type[j]= key\n",
+    "                        input_shape[j]= value\n",
+    "                for j, p in enumerate(data[i]['args']['output_type_shape']):\n",
+    "                    for key, value in p.items():\n",
+    "                        output_type = key\n",
+    "                        output_shape = value\n",
+    "                        break\n",
+    "                    break\n",
+    "\n",
+    "                other_info[output_name] = [output_name, op_type, input_type[0],input_shape[0],\\\n",
+    "                                            input_type[1],input_shape[1],\n",
+    "                                                input_type[2], input_shape[2],\n",
+    "                                                output_type,output_shape]\n",
+    "            else:\n",
+    "                count_time[output_name] += int(data[i][\"dur\"])\n",
+    "                count_name[output_name] += 1\n",
+    "\n",
+    "\n",
+    "for key, value in count_time.items():\n",
+    "    duration = round(value / count_name[key],2)\n",
+    "    total_duration+=duration\n",
+    "    kernel_info = other_info[key]\n",
+    "    \n",
+    "    kernel_info.append(duration)\n",
+    "    writer.writerow(kernel_info)\n",
+    "    node_count+=1\n",
     "csvf.close()\n",
+    "print(\"total duration:\",round(total_duration/1000,2))\n",
     "print(\"Done to generate file {}\". format(csv_file))\n",
     "          "
    ]
