script to analyze csv

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -1065,7 +1065,36 @@
     "\n",
     "\n",
     "csvf.close()\n",
-    "print(\"{} generated\".format(csv_file))"
+    "print(\"{} generated\".format(csv_file))\n",
+    "\n",
+    "import pandas as pd\n",
+    "df1 = pd.read_csv(os.path.join(rootpath, csv_file))\n",
+    "filtered_df1 = df1[(df1['layer type'] == 'DML_OPERATOR_CONVOLUTION') & (df1['execute type'] == 'ExecuteMetaCommand')]\n",
+    "filtered_df1.to_csv(os.path.join(rootpath, 'temp.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare different pix log\n",
+    "import pandas as pd\n",
+    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\helpWindow\\for_prithv\"\n",
+    "log1 = \"v0_pixlog_1_test.csv\"\n",
+    "log2 = \"v1_Emptyreorder_pixlog_test.csv\"\n",
+    "log3 = \"origin_pixlog_test.csv\"\n",
+    "df1 = pd.read_csv(os.path.join(rootpath, log1))\n",
+    "df2 = pd.read_csv(os.path.join(rootpath, log2))\n",
+    "df3 = pd.read_csv(os.path.join(rootpath, log3))\n",
+    "\n",
+    "filtered_df1 = df1[(df1['layer type'] == 'DML_OPERATOR_GEMM') & (df1['execute type'] == 'ExecuteMetaCommand')]\n",
+    "filtered_df2 = df2[(df2['layer type'] == 'DML_OPERATOR_GEMM') & (df2['execute type'] == 'ExecuteMetaCommand')]\n",
+    "filtered_df3 = df3[(df3['layer type'] == 'DML_OPERATOR_GEMM') & (df3['execute type'] == 'ExecuteMetaCommand')]\n",
+    "\n",
+    "merged_df = filtered_df1.merge(filtered_df2, on='layer name').merge(filtered_df3, on='layer name')  #df1  x, df2 y\n",
+    "merged_df.to_csv(os.path.join(rootpath, 'compare_gemm.csv'), index=False)"
    ]
   },
   {
