add parsing for MHA DDI log

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -689,6 +689,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MHA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "import re\n",
+    "def create_ddiMHA_csv( root_path,ddi_file):\n",
+    "\n",
+    "    openf =  open(os.path.join(root_path,ddi_file), \"r\")\n",
+    "    lines = openf.readlines()\n",
+    "\n",
+    "    i = -1\n",
+    "    csv_file = os.path.join(root_path,\"DDI_MHA.csv\")\n",
+    "    csvf = open(csv_file,\"w\",newline='')\n",
+    "    writer =csv.writer(csvf)\n",
+    "\n",
+    "    line = [\"mc_type\",\"gemm0_kernel_name\", \"gemm0_A_size\", \"gemm0_B_size\",\"gemm0_Output_size\",\n",
+    "            \"gemm1_kernel_name\", \"gemm1_A_size\", \"gemm1_B_size\",\"gemm1_Output_size\"]\n",
+    "    writer.writerow(line)\n",
+    "    while i < len(lines)-1:\n",
+    "        i+=1\n",
+    "        if \"Passed-Metacommand type : MHA\" in lines[i]:\n",
+    "            info_dic =dict()\n",
+    "            mc_type = lines[i].rstrip().split(\"type :\")[-1]\n",
+    "            gemm0_kernel_name = \"\"\n",
+    "            gemm0_A_size = \"\"\n",
+    "            gemm0_B_size = \"\"\n",
+    "            gemm0_Output_size = \"\"\n",
+    "\n",
+    "            gemm1_kernel_name = \"\"\n",
+    "            gemm1_A_size = \"\"\n",
+    "            gemm1_B_size = \"\"\n",
+    "            gemm1_Output_size = \"\"\n",
+    "\n",
+    "            for k in range(50):\n",
+    "                if \"m_mhaGemm0Desc.ADesc.Size\" in lines[i-k]:\n",
+    "                    print(lines[i-k])\n",
+    "                    gemm0_A_size =  re.findall(r'[[](.*?)[]]', lines[i-k])[0]\n",
+    "                    continue\n",
+    "                if \"m_mhaGemm0Desc.BDesc.Size\" in lines[i-k]:\n",
+    "                    print(lines[i-k])\n",
+    "                    gemm0_B_size =  re.findall(r'[[](.*?)[]]', lines[i-k])[0]\n",
+    "                    continue\n",
+    "                if \"m_mhaGemm0Desc.OutputDesc.Size\" in lines[i-k]:\n",
+    "                    print(lines[i-k])\n",
+    "                    gemm0_Output_size =  re.findall(r'[[](.*?)[]]', lines[i-k])[0]\n",
+    "                    continue\n",
+    "                if \"MHA Gemm0 Shader Code\" in lines[i-k] or \"BLOB Gemm Kernel\" in lines[i-k]:\n",
+    "                    if \"MHA Gemm0 Shader Code\" in lines[i-k]:\n",
+    "                        gemm0_kernel_name =  lines[i-k].split('=')[1][:-1]\n",
+    "                    else:\n",
+    "                        gemm0_kernel_name = lines[i-k].split(\"BLOB Gemm Kernel\")[-1].strip().split(\".cpp\")[0]\n",
+    "                    continue\n",
+    "                \n",
+    "                if \"m_mhaGemm1Desc.ADesc.Size\" in lines[i-k]:\n",
+    "                    print(lines[i-k])\n",
+    "                    gemm1_A_size =  re.findall(r'[[](.*?)[]]', lines[i-k])[0]\n",
+    "                    continue\n",
+    "                if \"m_mhaGemm1Desc.BDesc.Size\" in lines[i-k]:\n",
+    "                    print(lines[i-k])\n",
+    "                    gemm1_B_size =  re.findall(r'[[](.*?)[]]', lines[i-k])[0]\n",
+    "                    continue\n",
+    "                if \"m_mhaGemm1Desc.OutputDesc.Size\" in lines[i-k]:\n",
+    "                    print(lines[i-k])\n",
+    "                    gemm1_Output_size =  re.findall(r'[[](.*?)[]]', lines[i-k])[0]\n",
+    "                    continue\n",
+    "                if \"MHA Gemm1 Shader Code\" in lines[i-k] or \"BLOB Gemm Kernel\" in lines[i-k]:\n",
+    "                    if \"MHA Gemm0 Shader Code\" in lines[i-k]:\n",
+    "                        gemm1_kernel_name =  lines[i-k].split('=')[1][:-1]\n",
+    "                    else:\n",
+    "                        gemm1_kernel_name = lines[i-k].split(\"BLOB Gemm Kernel\")[-1].strip().split(\".cpp\")[0]\n",
+    "                    continue\n",
+    "            \n",
+    "            writer.writerow([mc_type,gemm0_kernel_name, gemm0_A_size, gemm0_B_size,gemm0_Output_size,\n",
+    "                                gemm1_kernel_name, gemm1_A_size, gemm1_B_size,gemm1_Output_size])\n",
+    "\n",
+    "    csvf.close()\n",
+    "    print(\"{} generated\".format(csv_file))\n",
+    "    df = pd.read_csv(csv_file)\n",
+    "    s = pd.pivot_table(df, index=['gemm0_kernel_name', \"gemm1_kernel_name\"], aggfunc={\"gemm0_kernel_name\": \"count\", })\n",
+    "    s.columns=['count']\n",
+    "    ddi_conv_pivot_table = s.sort_values(by='count', ascending=0)\n",
+    "    ddi_conv_pivot_table.to_csv(os.path.join(root_path, \"ddi_mha_pivot_table.csv\"))\n",
+    "    print(s)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
